login page styled

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,9 @@
 @import 'tailwindcss' theme(static);
 @source "../views/";
 @source "../../app/";
+@import './fonts.css';
+
+@theme {
+  --font-brand-primary: 'Gantari', sans-serif;
+  --font-brand-secondary: 'Lato', sans-serif;
+}
