--- a/resources/css/components/menu.css
+++ b/resources/css/components/menu.css
@@ -3,6 +3,8 @@
   text-transform: uppercase;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  border-bottom: solid 1px rgba(240, 230, 215, 0.5);
 
   .brand {
     display: block;
@@ -34,7 +36,7 @@
   .menu-header-container {
     position: absolute;
     right: 0;
-    top: 100%;
+    top: calc(100% + 12px);
     background-color: var(--black);
     color: var(--white);
     overflow: hidden;
@@ -61,7 +63,7 @@
     opacity: 1;
     transform: translateY(0);
     @media (max-width: 300px) {
-      width: 100vw;
+      width: 200px;
     }
   }
 
