--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,7 @@
 @import './components/footer.css';
 @import './components/button.css';
 @import './components/banner.css';
+@import './components/ping-pong.css';
 @import './utils/typography.css';
 @import './utils/colors.css';
 
