--- a/resources/css/editor.css
+++ b/resources/css/editor.css
@@ -2,6 +2,7 @@
 @import './fonts.css';
 @import './components/button.css';
 @import './components/banner.css';
+@import './components/ping-pong.css';
 @import './utils/typography.css';
 @import './utils/colors.css';
 
