--- a/resources/css/components/menu.css
+++ b/resources/css/components/menu.css
@@ -1,10 +1,16 @@
 .banner {
   font-family: 'Gantari', sans-serif;
-  text-transform: uppercase;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   border-bottom: solid 1px rgba(240, 230, 215, 0.5);
+  position: fixed;
+  z-index: 50;
+  color: var(--white);
+
+  .container {
+    text-transform: uppercase;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
   .brand {
     display: block;
@@ -98,7 +104,7 @@
   position: absolute;
   width: 60%;
   height: 3px;
-  background-color: var(--black);
+  background-color: var(--white);
   border-radius: 2px;
   transition: all 0.4s ease-in-out;
 }
