--- a/resources/css/components/ping-pong.css
+++ b/resources/css/components/ping-pong.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  gap: 20px;
   width: 100%;
   box-sizing: border-box;
 }
@@ -20,11 +19,22 @@
   flex-direction: column;
 }
 
+.editor-styles-wrapper .bh-ping-pong .wp-block,
+.editor-styles-wrapper .bh-ping-pong .wp-block-paragraph,
+.editor-styles-wrapper .bh-ping-pong .wp-block-heading,
+.editor-styles-wrapper .bh-ping-pong .wp-block-button,
+.editor-styles-wrapper .bh-ping-pong .wp-block-group,
+.editor-styles-wrapper .bh-ping-pong .wp-block {
+  margin-top: 0.05rem !important;
+  margin-bottom: 0.05rem !important;
+  padding: 0 !important;
+}
+
 .bh-ping-pong .bh-content-block,
 .bh-ping-pong .bh-image-block {
   flex: 1 1 auto;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 /* === EDITOR === */
@@ -44,7 +54,7 @@
   .bh-ping-pong
   .block-editor-block-list__layout
   > .block-editor-block-list__block {
-  flex: 0 0 50% !important;
+  /* flex: 0 0 50% !important; */
   max-width: 50% !important;
   min-width: 0 !important;
   display: flex !important;
@@ -92,4 +102,25 @@
 .bh-ping-pong-content-block-wrapper {
   padding-top: 10rem;
   padding-bottom: 10rem;
+  width: 100%;
+}
+
+.editor-styles-wrapper
+  .bh-ping-pong
+  .bh-ping-pong-content-block-wrapper
+  .block-editor-inner-blocks
+  .block-editor-block-list__layout {
+  flex-direction: column !important;
+}
+
+.editor-styles-wrapper
+  .bh-ping-pong
+  .bh-ping-pong-content-block-wrapper
+  .block-editor-block-list__layout
+  > .block-editor-block-list__block {
+  max-width: 100% !important;
+}
+
+.my-3 {
+  margin: 3rem 0;
 }
