--- a/resources/css/editor.css
+++ b/resources/css/editor.css
@@ -5,6 +5,7 @@
 @import './components/ping-pong.css';
 @import './utils/typography.css';
 @import './utils/colors.css';
+@import './utils/spacing.css';
 
 :root {
   --primary: #073a25;
