--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,6 +9,7 @@
 @import './components/ping-pong.css';
 @import './utils/typography.css';
 @import './utils/colors.css';
+@import './utils/spacing.css';
 
 @theme {
   --font-brand-primary: 'Gantari', sans-serif;
