--- a/resources/css/components/menu.css
+++ b/resources/css/components/menu.css
@@ -5,7 +5,7 @@
   z-index: 50;
   color: var(--white);
 
-  .container {
+  .container-menu {
     text-transform: uppercase;
     display: flex;
     justify-content: space-between;
