--- a/resources/css/components/menu.css
+++ b/resources/css/components/menu.css
@@ -4,6 +4,7 @@
   position: fixed;
   z-index: 50;
   color: var(--white);
+  transition: background-color 0.4s ease;
 
   .container-menu {
     text-transform: uppercase;
@@ -55,6 +56,10 @@
     transform: translateY(-10px);
     transition: all 0.4s ease;
   }
+}
+
+.banner.scrolled {
+  background-color: black !important;
 }
 
 @media (max-width: 300px) {
