--- a/resources/css/components/ping-pong.css
+++ b/resources/css/components/ping-pong.css
@@ -158,7 +158,7 @@
 /* Small mobile: smaller gaps, shorter image height */
 @media (max-width: 480px) {
   .bh-ping-pong {
-    gap: 0.75rem;
+    gap: 0;
   }
 
   .bh-ping-pong .bh-image-block {
