--- a/resources/css/components/menu.css
+++ b/resources/css/components/menu.css
@@ -1,4 +1,11 @@
 .banner {
+  background-color: var(--black);
+}
+.home .banner {
+  background-color: transparent;
+}
+
+.banner {
   font-family: 'Gantari', sans-serif;
   border-bottom: solid 1px rgba(240, 230, 215, 0.5);
   position: fixed;
