--- a/resources/css/components/button.css
+++ b/resources/css/components/button.css
@@ -139,3 +139,10 @@
     padding: 0.5rem 1.25rem;
   }
 }
+
+@media (max-width: 639px) {
+  .btn {
+    display: inline-block;
+    margin: 1rem auto !important;
+  }
+}
