--- a/resources/css/utils/typography.css
+++ b/resources/css/utils/typography.css
@@ -169,3 +169,9 @@ strong {
     font-size: 1.25rem; /* ~37% smaller than 2rem */
   }
 }
+
+.headline--xsmall {
+  font-size: 1.6rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+}
