--- a/resources/css/utils/spacing.css
+++ b/resources/css/utils/spacing.css
@@ -1,1 +1,20 @@
+.bhmy-3 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
 
+.bhmt-3 {
+  margin-top: 3rem;
+}
+
+.bhmb-3 {
+  margin-bottom: 3rem;
+}
+
+.bhml-3 {
+  margin-left: 3rem;
+}
+
+.bhmr-3 {
+  margin-right: 3rem;
+}
