--- a/resources/css/components/menu.css
+++ b/resources/css/components/menu.css
@@ -18,6 +18,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
   }
 
   .brand {
@@ -50,18 +51,27 @@
   .menu-header-container {
     position: absolute;
     right: 0;
-    top: calc(100% + 12px);
+    top: calc(100% + 1px);
     background-color: var(--black);
     color: var(--white);
     overflow: hidden;
     width: 300px;
     padding: 15px;
+    /* clip-path: polygon(0 0, 100% 0, 100% 80%, 0% calc(100% - 60px)); */
 
     /* Start hidden */
     max-height: 0;
     opacity: 0;
     transform: translateY(-10px);
     transition: all 0.4s ease;
+
+    li {
+      padding: 4px 8px;
+      a {
+        font-size: 1.5rem;
+        text-decoration: none;
+      }
+    }
   }
 }
 
@@ -75,14 +85,12 @@
   }
 }
 
-.nav-primary-mobile.active {
+#headbanner.active {
   .menu-header-container {
-    max-height: 400px; /* adjust based on your menu height */
+    min-height: 100vh; /* adjust based on your menu height */
     opacity: 1;
     transform: translateY(0);
-    @media (max-width: 300px) {
-      width: 200px;
-    }
+    width: 100%;
   }
 
   .burger-line:nth-child(1) {
@@ -109,7 +117,6 @@
   border-radius: 5px;
   width: 50px;
   height: 40px;
-  position: relative;
 }
 
 .burger-line {
