final commit before server

--- a/resources/css/components/menu.css
+++ b/resources/css/components/menu.css
@@ -43,6 +43,11 @@
           text-decoration: none;
         }
       }
+      li.current_page_item {
+        a {
+          text-decoration: underline;
+        }
+      }
     }
   }
 }
